# phys431

johnson-and-shot-noise-main/: Noise Analysis (template, 2022).ipynb  Noise Analysis (template, 2024).html  Noise Analysis (template, 2024).ipynb  Noise Analysis (template, 2024).tex  Noise-Analysis--template,-2024-.tex  README.md  hello.ipynb  pyproject.toml
johnson-and-shot-noise-main/Noise Analysis (template, 2024)_files/libs/bootstrap/: bootstrap-ef166407d74830010260db35e4ac84ea.min.css
johnson-and-shot-noise-main/rawData/: Johnson data - Johnson_Room_jupyter.csv  Johnson data - Johnson_ln2_jupyter.csv  Johnson data - shot.csv
low-temperature-superconductivity-main/: Example LMFit Model with Arbitrary Function.ipynb  README.md  Superconductivity Individual Analysis (New calibration template, 2024).ipynb  Superconductivity Individual Analysis (Template 2024).ipynb  graphite_data.csv
mossbauer-spectroscopy-main/: Composite Model Demo Mossbauer.ipynb  Mossbauer Full Analysis (Template).ipynb  Mossbauer Full Analysis (Template).md  Mossbauer Results-Only Analysis (Template).ipynb  README.md  energycalculations.ipynb  main.py  pyproject.toml
mossbauer-spectroscopy-main/Data Collected/: Fe2O3_74.35mV.tsv  fe57.tsv  nitroprusside_30.80mV.tsv
mossbauer-spectroscopy-main/exportToHTML/: Mossbauer Full Analysis (Template).ipynb.html
