[project]
name = "johnson-and-shot-noise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "control>=0.10.2",
    "ipykernel>=7.1.0",
    "jupyter-client>=8.8.0",
    "jupytext>=1.19.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "mplcyberpunk>=0.7.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pynvim>=0.6.0",
    "scipy>=1.17.0",
    "scipy-stubs~=1.17.0",
    "sympy>=1.14.0",
    "uncertainties>=3.2.3",
]
